third_party/move/move-compiler-v2/tests/checking/typing/module_call.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/checking/typing/module_call.move:32:38
   │
32 │         (X::bing(false, @0x0, 0): ());
   │                                      ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/checking/typing/module_call.move:39:35
   │
39 │         (bing(false, @0x0, 0): ());
   │                                   ^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:43:26
   │
43 │         let () = X::bing(X::baz(X::bar(X::foo()))); // invalid
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:43:18
   │
43 │         let () = X::bing(X::baz(X::bar(X::foo()))); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:44:27
   │
44 │         let () = X::bing (X::baz (X::bar (X::foo()))); // invalid
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:44:18
   │
44 │         let () = X::bing (X::baz (X::bar (X::foo()))); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:45:27
   │
45 │         let () = X::bing (X::baz (X::bar(1))); // invalid
   │                           ^^^^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:45:18
   │
45 │         let () = X::bing (X::baz (X::bar(1))); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:46:18
   │
46 │         let () = X::bing (X::baz (@0x0, 1)); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:51:23
   │
51 │         let () = bing(baz(bar(foo()))); // invalid
   │                       ^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:51:18
   │
51 │         let () = bing(baz(bar(foo()))); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:52:24
   │
52 │         let () = bing (baz (bar (foo()))); // invalid
   │                        ^^^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:52:18
   │
52 │         let () = bing (baz (bar (foo()))); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: the function takes 2 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:53:24
   │
53 │         let () = bing (baz (bar(1))); // invalid
   │                        ^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:53:18
   │
53 │         let () = bing (baz (bar(1))); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^

error: the function takes 3 arguments but 1 were provided
   ┌─ tests/checking/typing/module_call.move:54:18
   │
54 │         let () = bing (baz (@0x0, 1)); // invalid
   │                  ^^^^^^^^^^^^^^^^^^^^
